--- a/src/common/style/color.scss
+++ b/src/common/style/color.scss
@@ -1,4 +1,59 @@
-$primary-color: #1890ff;
-$primary-color-light: #40a9ff;
-$primary-color-dark: #096dd9;
-$primary-color-contrast: #fff;
+// primary color
+$primary-background-color: #007bff;
+$primary-text-color: #ffffff;
+$primary-border-color: #007bff;
+
+// primary color hover
+$primary-background-color-hover: #0069d9;
+$primary-text-color-hover: #ffffff;
+$primary-border-color-hover: #0062cc;
+
+// secondary color
+$secondary-background-color: #6c757d;
+$secondary-text-color: #ffffff;
+$secondary-border-color: #6c757d;
+
+// secondary color hover
+$secondary-background-color-hover: #5a6268;
+$secondary-text-color-hover: #ffffff;
+$secondary-border-color-hover: #545b62;
+
+// success color
+$success-background-color: #28a745;
+$success-text-color: #ffffff;
+$success-border-color: #28a745;
+
+// success color hover
+$success-background-color-hover: #218838;
+$success-text-color-hover: #ffffff;
+$success-border-color-hover: #1e7e34;
+
+// danger color
+$danger-background-color: #dc3545;
+$danger-text-color: #ffffff;
+$danger-border-color: #dc3545;
+
+// danger color hover
+$danger-background-color-hover: #c82333;
+$danger-text-color-hover: #ffffff;
+$danger-border-color-hover: #bd2130;
+
+// warning color
+$warning-background-color: #ffc107;
+$warning-text-color: #212529;
+$warning-border-color: #ffc107;
+
+// warning color hover
+$warning-background-color-hover: #e0a800;
+$warning-text-color-hover: #212529;
+$warning-border-color-hover: #d39e00;
+
+// info color
+$info-background-color: #17a2b8;
+$info-text-color: #ffffff;
+$info-border-color: #17a2b8;
+
+// info color hover
+$info-background-color-hover: #138496;
+$info-text-color-hover: #ffffff;
+$info-border-color-hover: #117a8b;
