add button size

--- a/src/common/style/size.scss
+++ b/src/common/style/size.scss
@@ -19,6 +19,10 @@ $text-size-60: 60px;
 /* button sizes */
 $button-width-m: 80px;
 $button-height-m: 40px;
+$button-width-s: 60px;
+$button-height-s: 30px;
+$button-width-l: 100px;
+$button-height-l: 50px;
 
 /* Border radius */
 $border-radius-5: 5px;
