update button Radius

--- a/src/common/style/color.scss
+++ b/src/common/style/color.scss
@@ -1,59 +1,59 @@
 // primary color
-$primary-background-color: #007bff;
+$primary-background-color: #3C64F4;
 $primary-text-color: #ffffff;
-$primary-border-color: #007bff;
+$primary-border-color: #3C64F4;
 
 // primary color hover
-$primary-background-color-hover: #0069d9;
+$primary-background-color-hover: #2E50CF;
 $primary-text-color-hover: #ffffff;
 $primary-border-color-hover: #0062cc;
 
 // secondary color
-$secondary-background-color: #6c757d;
+$secondary-background-color: #1FC4D3;
 $secondary-text-color: #ffffff;
 $secondary-border-color: #6c757d;
 
 // secondary color hover
-$secondary-background-color-hover: #5a6268;
+$secondary-background-color-hover: #17ADB9;
 $secondary-text-color-hover: #ffffff;
 $secondary-border-color-hover: #545b62;
 
 // success color
-$success-background-color: #28a745;
+$success-background-color: #28c76f;
 $success-text-color: #ffffff;
 $success-border-color: #28a745;
 
 // success color hover
-$success-background-color-hover: #218838;
+$success-background-color-hover: #20a85c;
 $success-text-color-hover: #ffffff;
 $success-border-color-hover: #1e7e34;
 
 // danger color
-$danger-background-color: #dc3545;
+$danger-background-color: #E94560;
 $danger-text-color: #ffffff;
 $danger-border-color: #dc3545;
 
 // danger color hover
-$danger-background-color-hover: #c82333;
+$danger-background-color-hover: #D8344F;
 $danger-text-color-hover: #ffffff;
 $danger-border-color-hover: #bd2130;
 
 // warning color
-$warning-background-color: #ffc107;
+$warning-background-color: #F6AE2D;
 $warning-text-color: #212529;
 $warning-border-color: #ffc107;
 
 // warning color hover
-$warning-background-color-hover: #e0a800;
+$warning-background-color-hover: #CA8A0E;
 $warning-text-color-hover: #212529;
 $warning-border-color-hover: #d39e00;
 
 // info color
-$info-background-color: #17a2b8;
+$info-background-color: #5A66F2;
 $info-text-color: #ffffff;
 $info-border-color: #17a2b8;
 
 // info color hover
-$info-background-color-hover: #138496;
+$info-background-color-hover: #464FCC;
 $info-text-color-hover: #ffffff;
 $info-border-color-hover: #117a8b;
