--- a/src/common/style/size.scss
+++ b/src/common/style/size.scss
@@ -24,9 +24,15 @@ $button-height-s: 30px;
 $button-width-l: 100px;
 $button-height-l: 50px;
 
+/* button font sizes */
+$button-font-size-s: 12px;
+$button-font-size-m: 14px;
+$button-font-size-l: 16px;
+
 /* Border radius */
 $border-radius-5: 5px;
 $border-radius-10: 10px;
+$border-radius-15: 15px;
 
 /* Margins */
 $margin-10: 10px;
