--- a/src/component/button/button.scss
+++ b/src/component/button/button.scss
@@ -6,16 +6,37 @@ ma-button {
         display: flex;
         width: 100%;
         height: 100%;
-        border-radius: size.$border-radius-5;
         border: none;
         padding: size.$padding-5 size.$padding-5;
         cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    &[radius="5"] {
+        &::part(button) {
+            border-radius: size.$border-radius-5;
+        }
+    }
+
+    &[radius="10"] {
+        &::part(button) {
+            border-radius: size.$border-radius-10;
+        }
+    }
+
+    &[radius="15"] {
+        &::part(button) {
+            border-radius: size.$border-radius-15;
+        }
     }
 
     &[size="m"] {
         &::part(button) {
             width: size.$button-width-m;
             height: size.$button-height-m;
+            font-size: size.$button-font-size-m;
         }
     }
 
@@ -23,6 +44,7 @@ ma-button {
         &::part(button) {
             width: size.$button-width-s;
             height: size.$button-height-s;
+            font-size: size.$button-font-size-s;
         }
     }
 
@@ -30,6 +52,7 @@ ma-button {
         &::part(button) {
             width: size.$button-width-l;
             height: size.$button-height-l;
+            font-size: size.$button-font-size-l;
         }
     }
 
