--- a/src/common/style/color.scss
+++ b/src/common/style/color.scss
@@ -1,20 +1,20 @@
 // primary color
-$primary-background-color: #3C64F4;
+$primary-background-color: #3c64f4;
 $primary-text-color: #ffffff;
-$primary-border-color: #3C64F4;
+$primary-border-color: #3c64f4;
 
 // primary color hover
-$primary-background-color-hover: #2E50CF;
+$primary-background-color-hover: #2e50cf;
 $primary-text-color-hover: #ffffff;
 $primary-border-color-hover: #0062cc;
 
 // secondary color
-$secondary-background-color: #1FC4D3;
+$secondary-background-color: #1fc4d3;
 $secondary-text-color: #ffffff;
 $secondary-border-color: #6c757d;
 
 // secondary color hover
-$secondary-background-color-hover: #17ADB9;
+$secondary-background-color-hover: #17adb9;
 $secondary-text-color-hover: #ffffff;
 $secondary-border-color-hover: #545b62;
 
@@ -29,31 +29,31 @@ $success-text-color-hover: #ffffff;
 $success-border-color-hover: #1e7e34;
 
 // danger color
-$danger-background-color: #E94560;
+$danger-background-color: #e94560;
 $danger-text-color: #ffffff;
 $danger-border-color: #dc3545;
 
 // danger color hover
-$danger-background-color-hover: #D8344F;
+$danger-background-color-hover: #d8344f;
 $danger-text-color-hover: #ffffff;
 $danger-border-color-hover: #bd2130;
 
 // warning color
-$warning-background-color: #F6AE2D;
+$warning-background-color: #f6ae2d;
 $warning-text-color: #212529;
 $warning-border-color: #ffc107;
 
 // warning color hover
-$warning-background-color-hover: #CA8A0E;
+$warning-background-color-hover: #ca8a0e;
 $warning-text-color-hover: #212529;
 $warning-border-color-hover: #d39e00;
 
 // info color
-$info-background-color: #5A66F2;
+$info-background-color: #5a66f2;
 $info-text-color: #ffffff;
 $info-border-color: #17a2b8;
 
 // info color hover
-$info-background-color-hover: #464FCC;
+$info-background-color-hover: #464fcc;
 $info-text-color-hover: #ffffff;
 $info-border-color-hover: #117a8b;
