--- a/src/common/style/color.scss
+++ b/src/common/style/color.scss
@@ -57,3 +57,11 @@ $info-border-color: #17a2b8;
 $info-background-color-hover: #464fcc;
 $info-text-color-hover: #ffffff;
 $info-border-color-hover: #117a8b;
+
+$gray-silver: #d1d1d1;
+$color-black: #000000;
+$color-red: #ff0000;
+$color-gray: #6c757d;
+
+$color-focus: #3c64f4;
+$color-focus-shadow: 0 0 0 0.2rem rgba(60, 100, 244, 0.25);
