--- a/src/component/input/input.html
+++ b/src/component/input/input.html
@@ -1,6 +1,6 @@
-<template id="max-input">
-    <div class="max-input">
+<template id="ma-input">
+    <div part="input-container">
         <input part="input" type="text" id="input-field" />
-        <label part="label" class="text-size-10" for="input-field">Input</label>
+        <label part="label" for="input-field">Input</label>
     </div>
 </template>
