--- a/src/component/select/select.scss
+++ b/src/component/select/select.scss
@@ -5,4 +5,13 @@ ma-select {
     &::part(select-container) {
         display: none;
     }
+
+    &::part(select-label) {
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+        height: 40px;
+        border: 1px solid color.$gray-silver;
+        cursor: pointer;
+    }
 }
