remove part selector

--- a/src/component/input/input.html
+++ b/src/component/input/input.html
@@ -1,6 +1,6 @@
 <template id="ma-input">
-    <div part="input-container">
-        <input part="input" type="text" id="input-field" />
-        <label part="label" for="input-field">Input</label>
+    <div>
+        <input type="text" id="input-field" />
+        <label for="input-field">Input</label>
     </div>
 </template>
