--- a/src/component/select/select.html
+++ b/src/component/select/select.html
@@ -1,6 +1,6 @@
 <template id="ma-select">
-    <div part="select-label">Select</div>
-    <div part="select-container">
+    <div class="select-label">Select</div>
+    <div class="select-container">
         <slot>options</slot>
     </div>
 </template>
