--- a/src/component/input/input.scss
+++ b/src/component/input/input.scss
@@ -1,60 +1,58 @@
 @use "../../common/style/color" as color;
 @use "../../common/style/size" as size;
 
-ma-input {
-    &[placeholder] {
-        &::part(input) {
-            color: color.$color-gray;
-        }
-    }
-
-    &:not([label]) {
-        &::part(label) {
-            display: none;
-        }
-    }
-
-    &::part(input-container) {
-        position: relative;
-    }
-
-    &::part(input) {
-        margin: size.$margin-15 size.$margin-10;
-        padding: size.$padding-10 size.$padding-5;
-        outline: none;
-        transition: border-color 0.2s ease, box-shadow 0.2s ease;
-        border: 1px solid color.$gray-silver;
-        &:focus {
-            border-color: color.$color-focus;
-            box-shadow: color.$color-focus-shadow;
-        }
-    }
-
-    &::part(label little-label) {
-        position: absolute;
-        top: 0;
-        transform: none;
-        margin: 0;
-        left: 5px;
-        font-size: 10px;
-        color: #000000;
-        transition: all 0.2s ease;
-    }
-
-    &::part(required):after {
-        content: "*";
-        color: color.$color-red;
-    }
-
-    &::part(label big-label) {
-        margin-left: size.$margin-10;
-        position: absolute;
+:host([placeholder]) {
+    input {
         color: color.$color-gray;
-        top: 50%;
-        left: 10px;
-        transform: translateY(-50%);
-        transition: all 0.2s ease;
-        font-size: size.$text-size-14;
-        pointer-events: none;
     }
+}
+
+:host(:not([label])) {
+    label {
+        display: none;
+    }
+}
+
+div {
+    position: relative;
+}
+
+input {
+    margin: size.$margin-15 size.$margin-10;
+    padding: size.$padding-10 size.$padding-5;
+    outline: none;
+    transition: border-color 0.2s ease, box-shadow 0.2s ease;
+    border: 1px solid color.$gray-silver;
+    &:focus {
+        border-color: color.$color-focus;
+        box-shadow: color.$color-focus-shadow;
+    }
+}
+
+label.little-label {
+    position: absolute;
+    top: 0;
+    transform: none;
+    margin: 0;
+    left: 5px;
+    font-size: 10px;
+    color: #000000;
+    transition: all 0.2s ease;
+}
+
+:host([required]) label:after {
+    content: "*";
+    color: color.$color-red;
+}
+
+label.big-label {
+    margin-left: size.$margin-10;
+    position: absolute;
+    color: color.$color-gray;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    transition: all 0.2s ease;
+    font-size: size.$text-size-14;
+    pointer-events: none;
 }
