--- a/src/component/select/select.scss
+++ b/src/component/select/select.scss
@@ -1,17 +1,15 @@
 @use "../../common/style/color" as color;
 @use "../../common/style/size" as size;
 
-ma-select {
-    &::part(select-container) {
-        display: none;
-    }
+.select-container {
+    display: none;
+}
 
-    &::part(select-label) {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        height: 40px;
-        border: 1px solid color.$gray-silver;
-        cursor: pointer;
-    }
+.select-label {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    height: 40px;
+    border: 1px solid color.$gray-silver;
+    cursor: pointer;
 }
